--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-  
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h2> About us</h2>
-        <p> Hello and welcome</p>
-        <a href="index.html"> click here to go to Home page</a>
+       <h2>About us</h2>
+       <p>I am a new app developer leaner,taking much interest in coding</p>
+       <p>it is so amazing learning this beautiful skill</p>
     </body>
 </html>
