--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css" >
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Home page</h1>
-        <h2>This is a heading</h2>
-        <h3>This is a heading</h3>
-        <h4>This is a heading</h4>
-        <h5>This is a heading</h5>
-        <h1>This is a heading</h1>
-        <p>hello everyone</p>
-        <p>this is fun to do</p>
-        <a href="Boat.html"><img src="images/boat.jpg" height="150"/></a>
-        <img src="images/cablecar.jpg" height="150" />
-        <img src="images/city.jpg" height="150" />
-
-        <a href="http://www.google.com">click here to go to Google</a>
-        <a href="https://compu-kids.co.za/">click here to go to compu-kids</a>
-        <a href="about.html"> click here to go to About Us</a>
+        <div id="Menu">
+            <a href="#">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="gallery">
+            <a href="avenger-1.html"><img src="images/avengers_01.jpg"/></a>
+            <a href="avenger-2.html"><img src="images/avengers_02.jpg"/></a>
+            <a href="avenger-3.html"><img src="images/avengers_03.jpg"/></a>
+            <a href="avenger-4.html"><img src="images/avengers_04.jpg"/></a>
+            <a href="avenger-5.html"><img src="images/avengers_05.jpg"/></a>
+            <a href="avenger-6.html"><img src="images/avengers_06.jpg"/></a>
+        </div>
     </body>
 </html>
